# otus-cpp-basics-hw08

./: CMakeLists.txt  README.md  main.cpp
